--- a/lifeonchain/partner/index.html
+++ b/lifeonchain/partner/index.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Google Fonts - Noto Sans TC -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -65,15 +68,13 @@
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-blue" style="height: 1500px;">
+        <section class="shape shape-left-right shape-blue" style="height: 51vw;">
             <div class="section-container">
-                <div class="row">
-                    
-                </div>
+                <img src="/img/comingsoon.png" class="img-fluid"/>
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-yellow" style="height: 500px;">
+        <section class="shape shape-left-right shape-yellow" style="height: 350px;">
             <div class="section-container">
                 <div class="row">
                     
