--- a/lifeonchain/ticket/index.html
+++ b/lifeonchain/ticket/index.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Google Fonts - Noto Sans TC -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -69,19 +72,27 @@
             <div class="section-container" id="section_container">
                 <div class="row" id="ticket_row">
                     <div class="col-lg-3 col-md-6">
-                        <img class="img-fluid" src="/img/ticket-A.png"/>
+                        <a href="https://www.accupass.com/eflow/ticket/1910040534498487578350" target="_blank">
+                            <img class="img-fluid" src="/img/ticket-A.png"/>
+                        </a>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
-                        <img class="img-fluid" src="/img/ticket-B.png"/>
+                        <a href="https://www.accupass.com/eflow/ticket/1910040534498487578350" target="_blank">
+                            <img class="img-fluid" src="/img/ticket-B.png"/>
+                        </a>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
-                        <img class="img-fluid" src="/img/ticket-C.png"/>
+                        <a href="https://www.accupass.com/eflow/ticket/1910040534498487578350" target="_blank">
+                            <img class="img-fluid" src="/img/ticket-C.png"/>
+                        </a>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
-                        <img class="img-fluid" src="/img/ticket-D.png"/>
+                        <a href="https://www.accupass.com/eflow/ticket/1910040534498487578350" target="_blank">
+                            <img class="img-fluid" src="/img/ticket-D.png"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -97,7 +108,9 @@
 
         <section class="shape-fill-yellow">
             <div class="section-container">
-                <img src="/img/ticket-QA.png" class="img-fluid"/>
+                <a href="https://forms.gle/iVi5jzcEXeECMMMi8" target="_blank">
+                    <img src="/img/ticket-QA.png" class="img-fluid"/>
+                </a>
             </div>
         </section>
     </div>
@@ -152,7 +165,7 @@
         $(document).ready(function(){
             setTimeout(function(){
                 changeHeight();
-            }, 500);
+            }, 350);
         });
 
         $(window).on('resize', function(){
