--- a/lifeonchain/about/index.html
+++ b/lifeonchain/about/index.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Google Fonts - Noto Sans TC -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -57,27 +60,23 @@
     </nav>
 
     <div class="section-wrapper">
-        <section class="shape shape-right-left shape-yellow" style="height: 500px;">
+        <section class="shape shape-right-left shape-yellow" id="intro_section">
             <div class="section-container">
-                <div class="row mt-4">
-                    <div class="col-md-4 col-lg-6">
-                        <img src="/img/about-lifeonchain.png" class="intro-img img-fluid mb-4" style="max-width: 450px;" />
+                <div class="row mt-4" id="intro_row">
+                    <div class="col-lg-6">
+                        <img src="/img/lifeonchain-mark.png" class="img-fluid mb-4" />
                     </div>
-                    <div class="col-md-8 col-lg-6">
-                        <p>區塊鏈是什麼？</p>
-                        <p>生活、會因此而改變嗎？</p>
-                        <p>有別於以往強調技術與商業性質的區塊鏈活動，鏈上生活節2019將以生活的角度出發，強調與｢人｣的連結，與大家一起在未知的路途上探索，找尋區塊鏈更多的可能性。</p>
-                        <p>看！學！吃！玩！就在鏈上生活節2019；四大主題：｢大盜影城｣、｢鏈上講堂｣、｢生活市集｣、「百萬大富翁」帶給你一整天、全方位的的知識生活饗宴，體驗鏈上新世界，從今天起、Life On Chain！</p>
+                    <div class="col-lg-6">
+                        <p>「鏈上生活」為區塊鏈社群所組成的團隊，旨在積極推動「區塊鏈進入生活」的核心理念，強調以「實際體驗」、「有趣好玩」、「生活應用」讓大眾直接認識區塊鏈，並進一步探索區塊鏈對於未來生活的可能性。</p>
+                        <p>從密碼龐克到區塊鏈，其背後的精神其實都沒有改變：「如何在兼顧隱私與安全之下，建立起一種分散式的信任關係？」區塊鏈進入生活，人與人的協作方式即將產生改變，讓我們一起進入鏈上新世界：從今天起，Life On Chain !</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-blue" style="height: 550px;">
+        <section class="shape shape-left-right shape-blue" style="height: 50vw;">
             <div class="section-container">
-                <div class="row">
-                    
-                </div>
+                <img src="/img/comingsoon.png" class="img-fluid"/>
             </div>
         </section>
     </div>
@@ -123,6 +122,24 @@
 
     <!-- Custom scripts -->
     <script src="/js/main.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            setTimeout(function(){
+                changeHeight();
+            }, 350);
+        });
+
+        $(window).on('resize', function(){
+            changeHeight();
+        });
+
+        function changeHeight(){
+            var height = $(window).height();
+            var width = $(window).width();
+            $('#intro_section').css('height', $('#intro_row').height()+parseInt($('#intro_section').css('border-top-width'))*2+30+'px');
+        }
+    </script>
 
 </body>
 </html>
